update readme, added new images to slick-carousel, added jquery package, update index to added carousel, fix css and scss

--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -14,3 +14,12 @@ body {
   }
 }
 
+.main-carousel {
+  width: 550px;
+  margin-left: 50px;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #141313!important;
+}
