--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -1,22 +1,10 @@
 body {
-  background-color: #e6e6e6;
-}
-
-.container {
-  width: 300px;
-  height: 200px;
-  background-color: #9100bd;
-  text-align: center;
-
-  h1 {
-    font-size: 26px;
-    color: #092c2c;
-  }
+  background-color: #c7c3c3;
 }
 
 .main-carousel {
-  width: 550px;
-  margin-left: 50px;
+  width: 650px;
+  margin: 5% auto 0 auto;
 }
 
 .slick-prev:before,
